--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./app.js"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "connect-flash": "*",
-    "connect-mongo": "^2.0.3",
-    "cookie-parser": "*",
-    "debug": "^4.1.1",
-    "express": "^4.17.0",
-    "express-messages": "*",
-    "express-session": "^1.16.1",
-    "express-validator": "^5.3.1",
-    "mongoose": "^5.5.11",
-    "morgan": "^1.9.1",
-    "multer": "*",
-    "passport": "*",
-    "passport-http": "*",
-    "passport-local": "*"
+    "bcrypt": "^3.0.2",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
+    "dotenv": "^6.1.0",
+    "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
+    "morgan": "^1.9.0",
+    "mysql2": "^1.6.5",
+    "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.3",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.3.0",
+    "sequelize-cli": "^5.4.0"
   }
 }
